2008-12-04  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* Added the following files
	src/calendar/lightning/content/imip-bar.js
	src/patches/289038.diff
	We now correctly handle if we are the owner
	on the calendar in imip-bar.js

2008-12-03  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* We now correctly refresh ACLs when going online
	and we refresh the view once they are loaded
	* Fixed bug https://bugzilla.mozilla.org/show_bug.cgi?id=429126
	* Replaced mReadOnly with readOnly in calDavCalendar.js
	so we correctly mark the calendar as a read-only one
	when there's a network error.
	* Bumped version number to 0.9.1pre7
	* Moved the SENT-BY so we can handle the case when
	the calendar changes after having defined the attendees.
	
2008-11-28  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* We now allow the creation of cached
	calendar immediately. See:
	See https://bugzilla.mozilla.org/show_bug.cgi?id=466686
	for details
        * Bumped version number to 0.9.1pre6

2008-11-24  Ludovic Marcotte  <lmarcotte@inverse.ca>

        * Updated the code with regard to bug #463961
	* Bumped version number to 0.9.1pre5
	
2008-11-22  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* Added file src/patches/457854.diff
	to backport this particular bugfix
	* Added the calendar-fr.jar source files
	in order to fix typos in the French translation
	* Added src/calendar/base/content/widgets/minimonth.xml
	so that we update the view wrt the selected day
	See https://bugzilla.mozilla.org/show_bug.cgi?id=466979

2008-11-20  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* src/calendar/base/src/calTransactionManager.js
	We correctly handle the SEQUENCE increase upon
	event modification

2008-11-18  Ludovic Marcotte  <lmarcotte@inverse.ca>

        * src/calendar/base/content/sun-calendar-event-dialog.js
	 src/patches/464444.diff
	 new files in order to fix the issue (bug #464444) where
	 the last attendee wouldn't be notified when he was
	 removed from the list of invited attendees